<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_bg">

    <LinearLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:orientation="vertical"
            tools:context="br.com.fake.steam.LoginActivity">


        <EditText
                android:id="@+id/et_First_Name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/login_edittext_bg"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textColorHint="#8C8C96"
                android:hint="@string/first_Name"/>

        <EditText
                android:id="@+id/et_Last_Name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:background="@drawable/login_edittext_bg"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorAccent"
                android:hint="@string/last_Name"/>

        <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:background="@drawable/login_edittext_bg"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorAccent"
                android:hint="@string/email_Hint"/>


        <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:background="@drawable/login_edittext_bg"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorAccent"
                android:hint="@string/password_Hint"/>

        <Button
                android:id="@+id/btn_Register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_button_bg"
                android:text="@string/create_Account2"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"/>

    </LinearLayout>

</ScrollView>